--- a/terasky-marketing-agents/config.json
+++ b/terasky-marketing-agents/config.json
@@ -5,7 +5,8 @@
     },
     "bedrock": {
         "model_id": "us.anthropic.claude-3-5-sonnet-20241022-v2:0",
-        "image_model_id": "stability.stable-diffusion-xl-v1",
+        "image_model_id": "amazon.titan-image-generator-v2:0",
+        "image_region": "us-east-1",
         "max_tokens": 4096,
         "temperature": 0.7
     },
@@ -36,20 +37,20 @@
         ],
         "image_sizes": {
             "social_media": {
-                "width": 1200,
-                "height": 630
+                "width": 1024,
+                "height": 1024
             },
             "blog": {
-                "width": 800,
-                "height": 400
+                "width": 1024,
+                "height": 1024
             },
             "ad": {
-                "width": 728,
-                "height": 90
+                "width": 1024,
+                "height": 1024
             },
             "landing_page": {
-                "width": 1920,
-                "height": 1080
+                "width": 1024,
+                "height": 1024
             }
         }
     },
